<resources>
    <string name="app_name">FragmentDrill</string>
    <string name="fragment0_text">Меркурий</string>
    <string name="fragment1_text">Венера</string>
    <string name="fragment2_text">Земля</string>
    <string name="fragment3_text">Марс</string>
    <string name="fragment4_text">Юпитер</string>
    <string name="fragment5_text">Сатурн</string>
    <string name="fragment6_text">Уран</string>
    <string name="fragment7_text">Нептун</string>
    <string name="fragment8_text">Плутон</string>

    <string name="mercury_description">
            Мерку́рий — наименьшая планета Солнечной системы и самая близкая к Солнцу. Названа в честь
        древнеримского бога торговли — быстрого Меркурия, поскольку она движется по небу быстрее
        других планет. Её период обращения вокруг Солнца составляет всего 87,97 земных суток —
        самый короткий среди всех планет Солнечной системы.
            Видимое расстояние Меркурия от Солнца, если смотреть с Земли, никогда не превышает 28°.
        Эта близость к Солнцу означает, что планету можно увидеть только в течение небольшого
        времени после захода или до восхода солнца, обычно в сумерках. В телескоп у Меркурия можно
        увидеть фазы, изменяющиеся от тонкого серпа до почти полного диска, как у Венеры и Луны,
        а иногда он проходит по диску Солнца. Период изменения фаз Меркурия равен синодическому
        периоду его обращения — примерно 116 дней.
            Ось Меркурия имеет наименьший наклон из всех планет Солнечной системы
        (около 1/30 градуса). Однако эксцентриситет орбиты у него максимальный среди них, и поэтому
        в перигелии расстояние Меркурия от Солнца составляет всего около двух третей (66 %) от его
        расстояния в афелии. Поверхность Меркурия покрыта ударными кратерами и внешне похожа на
        лунную, что указывает на отсутствие внутренней геологической активности в последние
        миллиарды лет. Поскольку атмосферы у Меркурия почти нет, температура его поверхности
        меняется сильнее, чем на любой другой планете Солнечной системы: от 100 К (−173 °C) ночью
        до 700 К (+427 °C) днём в экваториальных регионах[12]. Полярные области постоянно охлаждены
        ниже 180 К (−93 °С)[10]. Известных природных спутников у планеты нет. Меркурий посетили два
        космических аппарата: в 1974 и 1975 годах рядом с ним пролетел «Маринер-10», а с 2008 до
        2015 года его исследовал MESSENGER. Последний в 2011 году вышел на орбиту вокруг планеты и,
        сделав за четыре года более 4000 витков вокруг неё, 30 апреля 2015 года израсходовал топливо
        и врезался в поверхность[13][14][15]. Планируется, что в 2025 году к Меркурию прибудет
        космический аппарат BepiColombo.
    </string>
</resources>